[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Number/NumberPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Number/ResultShower.tscn" type="PackedScene" id=4]

[node name="Game" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.32684
margin_bottom = 1.32684
mouse_filter = 2
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_right = 288.0
margin_bottom = 20.0

[node name="ExitButton" type="Button" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 20.0
text = "exit"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 244.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Help" type="Button" parent="HBoxContainer"]
light_mask = 4
margin_left = 248.0
margin_right = 288.0
margin_bottom = 20.0
text = "help"

[node name="GuessTimes" type="Label" parent="."]
margin_top = 40.0
margin_right = 288.0
margin_bottom = 54.0
text = "Guess:0/10"
align = 1

[node name="NumberPanel" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 74.0
margin_right = 288.0
margin_bottom = 138.0

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
margin_top = 158.0
margin_right = 288.0
margin_bottom = 222.0

[node name="GuessButton" type="TextureButton" parent="CenterContainer"]
margin_left = 112.0
margin_right = 176.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )

[node name="Message" type="Label" parent="."]
margin_top = 242.0
margin_right = 288.0
margin_bottom = 322.0
size_flags_vertical = 3
text = "Guess Failed"
align = 1

[node name="ResultShower" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 342.0
margin_right = 288.0
margin_bottom = 492.0
rect_min_size = Vector2( 288, 150 )
size_flags_horizontal = 3
alignment = 1

[node name="Control" type="Control" parent="."]
margin_top = 512.0
margin_right = 288.0
margin_bottom = 512.0
[connection signal="new_message" from="." to="." method="_on_Game_new_message"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CenterContainer/GuessButton" to="." method="_on_GuessButton_pressed"]
